# fuelog

./: .env.example  .gitignore  .prettierignore  .prettierrc  CLAUDE.md  MCP_TEST.md  commitlint.config.js  docker-compose.postgresql.yml  eslint.config.mjs  package.json  pnpm-lock.yaml  turbo.json
.github/chatmodes/: critical-thinking.chatmode.md  prd.chatmode.md
.github/instructions/: nextjs.instructions.md
.github/workflows/: claude.yml
.husky/: pre-commit
apps/crawler/: README.md  package.json  pyproject.toml
apps/crawler/src/fuelog_crawler/: __init__.py  __main__.py  cli.py  config.py  exceptions.py
apps/crawler/tests/: __init__.py  test_basic.py
apps/web/: package.json  tsconfig.json
apps/web/app/: layout.tsx  page.tsx
doc/: db.dbml
doc/prompt/: dbml.md
