[project]
name = "fuelog-crawler"
version = "0.1.0"
description = "Fuelog data crawler tool"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "httpx>=0.27.0",           # HTTP client for web requests
    "beautifulsoup4>=4.12.0",  # HTML parsing
    "pydantic>=2.0.0",         # Data validation
    "typer>=0.12.0",           # CLI framework
]

[project.scripts]
fuelog-crawler = "fuelog_crawler.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/fuelog_crawler"]

[dependency-groups]
dev = [
    "mypy>=1.17.1",
    "pytest>=8.4.1",
    "ruff>=0.12.8",
]
