[project]
name = "fuelog-crawler"
version = "0.1.0"
description = "Fuelog data crawler tool"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "httpx>=0.27.0",           # HTTP client for web requests
    "beautifulsoup4>=4.12.0",  # HTML parsing
    "pydantic>=2.0.0",         # Data validation
    "typer>=0.12.0",           # CLI framework
]

[project.scripts]
fuelog-crawler = "fuelog_crawler.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/fuelog_crawler"]

[dependency-groups]
dev = [
    "mypy>=1.17.1",
    "pytest>=8.4.1",
    "ruff>=0.12.8",
    "lxml-stubs>=0.5.1",
]

[tool.ruff]
target-version = "py313"
line-length = 88

[tool.ruff.lint]
# Modern Python best practices rule set with web scraping focus
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings  
    "F",   # Pyflakes
    "I",   # isort (import sorting)
    "N",   # pep8-naming
    "UP",  # pyupgrade (modern Python syntax)
    "B",   # flake8-bugbear - catches subtle bugs
    "S",   # bandit (security) - critical for web scraping
    "C4",  # flake8-comprehensions
    "PIE", # flake8-pie (unnecessary code)
    "RUF", # Ruff-specific rules
    # Enhanced security and web scraping specific rules
    "A",    # flake8-builtins (avoid shadowing builtins)
    "T20",  # flake8-print (no print statements in production)
    "DTZ",  # flake8-datetimez (proper timezone handling)
    "SLF",  # flake8-self (proper self usage in classes)
    "PERF", # perflint - performance anti-patterns for web scraping
]

# Common ignores for practical development
ignore = [
    "S101",  # Use of assert (common in tests)
    "S603",  # subprocess call without shell=True check
    "S607",  # Starting a process with a partial executable path
    "T201",  # Allow print() in CLI applications and debugging
]

[tool.ruff.format]
# Black-compatible formatting
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.lint.isort]
# Import sorting configuration
known-first-party = ["fuelog_crawler"]
force-single-line = false
combine-as-imports = true
